automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -517,11 +517,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    American Indian or Alaska Native\n",
+       "1           Asian or Pacific Islander\n",
+       "2           Black or African American\n",
+       "3                               White\n",
+       "4           Asian or Pacific Islander\n",
+       "Name: Race, dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df"
+    "df['Race'].head()"
    ]
   },
   {
