automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -606,11 +606,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Notes', 'State', 'State Code', 'Ten-Year Age Groups',\n",
+       "       'Ten-Year Age Groups Code', 'Gender', 'Gender Code', 'Race',\n",
+       "       'Race Code', 'Deaths', 'Population', 'Crude Rate'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.colums"
+    "df.index"
    ]
   },
   {
