automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -904,7 +904,7 @@
    ],
    "source": [
     "cols = ['Notes', 'State', 'Population']\n",
-    "df[cols].head()"
+    "df[cols].head()\n"
    ]
   },
   {
