automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -904,7 +904,9 @@
    ],
    "source": [
     "cols = ['Notes', 'State', 'Population']\n",
-    "df[cols].head()\n"
+    "df[cols].head()\n",
+    "cols2 = [\"State\",\"Race\"]\n",
+    "df[cols2]"
    ]
   },
   {
