automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1252,7 +1252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "White_100plus = df[d]"
+    "White_100plus = df[df[]\"Race\"]==\"White\"]"
    ]
   },
   {
