automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1288,192 +1288,192 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>736</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>12</td>\n",
        "      <td>&lt; 1 year</td>\n",
        "      <td>1</td>\n",
        "      <td>Female</td>\n",
        "      <td>F</td>\n",
        "      <td>White</td>\n",
        "      <td>2106-3</td>\n",
-       "      <td>2144</td>\n",
-       "      <td>347921.0</td>\n",
-       "      <td>616.2</td>\n",
+       "      <td>6590</td>\n",
+       "      <td>1342342.0</td>\n",
+       "      <td>490.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>740</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>12</td>\n",
        "      <td>&lt; 1 year</td>\n",
        "      <td>1</td>\n",
        "      <td>Male</td>\n",
        "      <td>M</td>\n",
        "      <td>White</td>\n",
        "      <td>2106-3</td>\n",
-       "      <td>2788</td>\n",
-       "      <td>364029.0</td>\n",
-       "      <td>765.9</td>\n",
+       "      <td>8466</td>\n",
+       "      <td>1406613.0</td>\n",
+       "      <td>601.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>743</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>12</td>\n",
        "      <td>1-4 years</td>\n",
        "      <td>1-4</td>\n",
        "      <td>Female</td>\n",
        "      <td>F</td>\n",
        "      <td>White</td>\n",
        "      <td>2106-3</td>\n",
-       "      <td>385</td>\n",
-       "      <td>1389699.0</td>\n",
-       "      <td>27.7</td>\n",
+       "      <td>1384</td>\n",
+       "      <td>5354670.0</td>\n",
+       "      <td>25.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>747</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>12</td>\n",
        "      <td>1-4 years</td>\n",
        "      <td>1-4</td>\n",
        "      <td>Male</td>\n",
        "      <td>M</td>\n",
        "      <td>White</td>\n",
        "      <td>2106-3</td>\n",
-       "      <td>561</td>\n",
-       "      <td>1457208.0</td>\n",
-       "      <td>38.5</td>\n",
+       "      <td>1978</td>\n",
+       "      <td>5623105.0</td>\n",
+       "      <td>35.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>750</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>12</td>\n",
        "      <td>5-14 years</td>\n",
        "      <td>5-14</td>\n",
        "      <td>Female</td>\n",
        "      <td>F</td>\n",
        "      <td>White</td>\n",
        "      <td>2106-3</td>\n",
-       "      <td>620</td>\n",
-       "      <td>3608616.0</td>\n",
-       "      <td>17.2</td>\n",
+       "      <td>1662</td>\n",
+       "      <td>14100233.0</td>\n",
+       "      <td>11.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <th>754</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>12</td>\n",
        "      <td>5-14 years</td>\n",
        "      <td>5-14</td>\n",
        "      <td>Male</td>\n",
        "      <td>M</td>\n",
        "      <td>White</td>\n",
        "      <td>2106-3</td>\n",
-       "      <td>841</td>\n",
-       "      <td>3809162.0</td>\n",
-       "      <td>22.1</td>\n",
+       "      <td>2320</td>\n",
+       "      <td>14854466.0</td>\n",
+       "      <td>15.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
+       "      <th>758</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>12</td>\n",
        "      <td>15-24 years</td>\n",
        "      <td>15-24</td>\n",
        "      <td>Female</td>\n",
        "      <td>F</td>\n",
        "      <td>White</td>\n",
        "      <td>2106-3</td>\n",
-       "      <td>2226</td>\n",
-       "      <td>3811460.0</td>\n",
-       "      <td>58.4</td>\n",
+       "      <td>6606</td>\n",
+       "      <td>14959069.0</td>\n",
+       "      <td>44.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
+       "      <th>762</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>12</td>\n",
        "      <td>15-24 years</td>\n",
        "      <td>15-24</td>\n",
        "      <td>Male</td>\n",
        "      <td>M</td>\n",
        "      <td>White</td>\n",
        "      <td>2106-3</td>\n",
-       "      <td>5710</td>\n",
-       "      <td>3988037.0</td>\n",
-       "      <td>143.2</td>\n",
+       "      <td>18031</td>\n",
+       "      <td>15986985.0</td>\n",
+       "      <td>112.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
+       "      <th>766</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>12</td>\n",
        "      <td>25-34 years</td>\n",
        "      <td>25-34</td>\n",
        "      <td>Female</td>\n",
        "      <td>F</td>\n",
        "      <td>White</td>\n",
        "      <td>2106-3</td>\n",
-       "      <td>3615</td>\n",
-       "      <td>3710682.0</td>\n",
-       "      <td>97.4</td>\n",
+       "      <td>10878</td>\n",
+       "      <td>15350633.0</td>\n",
+       "      <td>70.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31</th>\n",
+       "      <th>770</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>12</td>\n",
        "      <td>25-34 years</td>\n",
        "      <td>25-34</td>\n",
        "      <td>Male</td>\n",
        "      <td>M</td>\n",
        "      <td>White</td>\n",
        "      <td>2106-3</td>\n",
-       "      <td>7414</td>\n",
-       "      <td>3807744.0</td>\n",
-       "      <td>194.7</td>\n",
+       "      <td>25826</td>\n",
+       "      <td>16050246.0</td>\n",
+       "      <td>160.9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Notes    State  State Code Ten-Year Age Groups Ten-Year Age Groups Code  \\\n",
-       "3     NaN  Alabama           1            < 1 year                        1   \n",
-       "6     NaN  Alabama           1            < 1 year                        1   \n",
-       "9     NaN  Alabama           1           1-4 years                      1-4   \n",
-       "11    NaN  Alabama           1           1-4 years                      1-4   \n",
-       "13    NaN  Alabama           1          5-14 years                     5-14   \n",
-       "16    NaN  Alabama           1          5-14 years                     5-14   \n",
-       "19    NaN  Alabama           1         15-24 years                    15-24   \n",
-       "23    NaN  Alabama           1         15-24 years                    15-24   \n",
-       "27    NaN  Alabama           1         25-34 years                    25-34   \n",
-       "31    NaN  Alabama           1         25-34 years                    25-34   \n",
+       "     Notes    State  State Code Ten-Year Age Groups Ten-Year Age Groups Code  \\\n",
+       "736    NaN  Florida          12            < 1 year                        1   \n",
+       "740    NaN  Florida          12            < 1 year                        1   \n",
+       "743    NaN  Florida          12           1-4 years                      1-4   \n",
+       "747    NaN  Florida          12           1-4 years                      1-4   \n",
+       "750    NaN  Florida          12          5-14 years                     5-14   \n",
+       "754    NaN  Florida          12          5-14 years                     5-14   \n",
+       "758    NaN  Florida          12         15-24 years                    15-24   \n",
+       "762    NaN  Florida          12         15-24 years                    15-24   \n",
+       "766    NaN  Florida          12         25-34 years                    25-34   \n",
+       "770    NaN  Florida          12         25-34 years                    25-34   \n",
        "\n",
-       "    Gender Gender Code   Race Race Code  Deaths  Population Crude Rate  \n",
-       "3   Female           F  White    2106-3    2144    347921.0      616.2  \n",
-       "6     Male           M  White    2106-3    2788    364029.0      765.9  \n",
-       "9   Female           F  White    2106-3     385   1389699.0       27.7  \n",
-       "11    Male           M  White    2106-3     561   1457208.0       38.5  \n",
-       "13  Female           F  White    2106-3     620   3608616.0       17.2  \n",
-       "16    Male           M  White    2106-3     841   3809162.0       22.1  \n",
-       "19  Female           F  White    2106-3    2226   3811460.0       58.4  \n",
-       "23    Male           M  White    2106-3    5710   3988037.0      143.2  \n",
-       "27  Female           F  White    2106-3    3615   3710682.0       97.4  \n",
-       "31    Male           M  White    2106-3    7414   3807744.0      194.7  "
+       "     Gender Gender Code   Race Race Code  Deaths  Population Crude Rate  \n",
+       "736  Female           F  White    2106-3    6590   1342342.0      490.9  \n",
+       "740    Male           M  White    2106-3    8466   1406613.0      601.9  \n",
+       "743  Female           F  White    2106-3    1384   5354670.0       25.8  \n",
+       "747    Male           M  White    2106-3    1978   5623105.0       35.2  \n",
+       "750  Female           F  White    2106-3    1662  14100233.0       11.8  \n",
+       "754    Male           M  White    2106-3    2320  14854466.0       15.6  \n",
+       "758  Female           F  White    2106-3    6606  14959069.0       44.2  \n",
+       "762    Male           M  White    2106-3   18031  15986985.0      112.8  \n",
+       "766  Female           F  White    2106-3   10878  15350633.0       70.9  \n",
+       "770    Male           M  White    2106-3   25826  16050246.0      160.9  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "White_100plus = df[(df[\"Race\"]==\"White\") & (df.[\"State\"] == \"Florida\") & (df[\"Deaths\"]>100)]\n",
+    "White_100plus = df[(df[\"Race\"]==\"White\") & (df[\"State\"] == \"Florida\") & (df[\"Deaths\"]>100)]\n",
     "White_100plus.head(10)"
    ]
   },
