automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1649,7 +1649,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "grouped = df.groupby(['Gender', 'Deaths'])['Ra'].sum().reset_index()\n",
+    "grouped.head()"
+   ]
   },
   {
    "cell_type": "markdown",
